--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack"
+    "clean": "rimraf dist",
+    "prebuild:dev": "npm run clean",
+    "prebuild:prod": "npm run clean",
+    "build:dev": "cross-env NODE_ENV=development TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack",
+    "build:prod": "cross-env NODE_ENV=production TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack"
   },
   "author": "",
   "license": "ISC",
@@ -14,10 +18,16 @@
     "react-dom": "^16.3.1"
   },
   "devDependencies": {
+    "@types/html-webpack-plugin": "^2.30.3",
+    "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/node": "^9.6.4",
     "@types/react": "^16.3.9",
     "@types/react-dom": "^16.0.5",
+    "@types/rimraf": "^2.0.2",
     "@types/webpack": "^4.1.3",
+    "@types/webpack-merge": "^4.1.3",
+    "cross-env": "^5.1.4",
+    "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
@@ -27,12 +37,19 @@
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-typescript": "^0.11.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.8.3",
+    "rimraf": "^2.6.2",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
     "ts-loader": "^4.2.0",
     "ts-node": "^5.0.1",
     "tsconfig-paths": "^3.2.0",
     "typescript": "^2.8.1",
     "typescript-eslint-parser": "^14.0.0",
     "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "webpack-cli": "^2.0.14",
+    "webpack-merge": "^4.1.2"
   }
 }
