--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "prebuild:dev": "npm run clean",
     "prebuild:prod": "npm run clean",
     "build:dev": "cross-env NODE_ENV=development TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack",
-    "build:prod": "cross-env NODE_ENV=production TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack"
+    "build:prod": "cross-env NODE_ENV=production TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack",
+    "predev": "npm run clean",
+    "dev": "cross-env NODE_ENV=development TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack-dev-server --open --hot"
   },
   "author": "",
   "license": "ISC",
@@ -20,8 +22,8 @@
   "devDependencies": {
     "@types/html-webpack-plugin": "^2.30.3",
     "@types/mini-css-extract-plugin": "^0.2.0",
-    "@types/node": "^9.6.4",
-    "@types/react": "^16.3.9",
+    "@types/node": "^9.6.5",
+    "@types/react": "^16.3.10",
     "@types/react-dom": "^16.0.5",
     "@types/rimraf": "^2.0.2",
     "@types/webpack": "^4.1.3",
@@ -41,7 +43,7 @@
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.8.3",
     "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.7",
+    "sass-loader": "^7.0.1",
     "style-loader": "^0.20.3",
     "ts-loader": "^4.2.0",
     "ts-node": "^5.0.1",
@@ -50,6 +52,7 @@
     "typescript-eslint-parser": "^14.0.0",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3",
     "webpack-merge": "^4.1.2"
   }
 }
