--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -14,5 +14,6 @@ rules:
   key-spacing: "warn"
   typescript/no-unused-vars: "error"
   no-undef: "off" # interface will error
+  import/no-duplicates: "off"
 plugins:
   - typescript
