--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf dist",
-    "prebuild:dev": "npm run clean",
-    "prebuild:prod": "npm run clean",
-    "build:dev": "cross-env NODE_ENV=development TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack",
-    "build:prod": "cross-env NODE_ENV=production TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack",
+    "build:dev": "cross-env TS_NODE_PROJECT=tasks/tsconfig-webpack.json ts-node tasks/build-dev.ts",
+    "build:prod": "cross-env TS_NODE_PROJECT=tasks/tsconfig-webpack.json ts-node tasks/build-prod.ts",
     "predev": "npm run clean",
-    "dev": "cross-env NODE_ENV=development TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack-dev-server --open --hot"
+    "dev": "cross-env TS_NODE_PROJECT=tasks/tsconfig-webpack.json ts-node tasks/dev-server.ts",
+    "deploy": "tasks/deploy.sh"
   },
   "author": "",
   "license": "ISC",
@@ -22,11 +21,11 @@
   "devDependencies": {
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/mini-css-extract-plugin": "^0.2.0",
-    "@types/node": "^10.12.5",
-    "@types/react": "^16.7.2",
+    "@types/react": "^16.7.3",
     "@types/react-dom": "^16.0.9",
     "@types/rimraf": "^2.0.2",
     "@types/webpack": "^4.4.18",
+    "@types/webpack-dev-server": "^3.1.1",
     "@types/webpack-merge": "^4.1.3",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
@@ -44,10 +43,11 @@
     "node-sass": "^4.10.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
+    "script-ext-html-webpack-plugin": "^2.1.3",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.0",
     "ts-node": "^7.0.1",
-    "tsconfig-paths": "^3.6.0",
+    "tsconfig-paths": "^3.7.0",
     "typescript": "^3.1.6",
     "typescript-eslint-parser": "^20.1.1",
     "webpack": "^4.25.1",
