--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,10 @@
     "module": "esnext",
     "target": "esnext",
     "jsx": "react",
-    "sourceMap": true
+    "sourceMap": true,
+    "lib": [
+      "dom",
+      "esnext"
+    ]
   }
 }
