--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/html-webpack-plugin": "^3.2.0",
+    "@types/jsdom": "^12.2.0",
     "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/react": "^16.7.3",
     "@types/react-dom": "^16.0.9",
@@ -39,6 +40,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-typescript": "^0.13.0",
     "html-webpack-plugin": "^3.2.0",
+    "jsdom": "^13.0.0",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.10.0",
     "rimraf": "^2.6.2",
