--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "react-dom": "^16.6.1"
   },
   "devDependencies": {
+    "@types/fs-extra": "^5.0.4",
     "@types/html-webpack-plugin": "^3.2.0",
-    "@types/jsdom": "^12.2.0",
     "@types/mini-css-extract-plugin": "^0.2.0",
-    "@types/react": "^16.7.3",
+    "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
     "@types/rimraf": "^2.0.2",
     "@types/webpack": "^4.4.18",
@@ -39,8 +39,8 @@
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-typescript": "^0.13.0",
+    "fs-extra": "^7.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "jsdom": "^13.0.0",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.10.0",
     "rimraf": "^2.6.2",
@@ -51,7 +51,7 @@
     "ts-node": "^7.0.1",
     "tsconfig-paths": "^3.7.0",
     "typescript": "^3.1.6",
-    "typescript-eslint-parser": "^20.1.1",
+    "typescript-eslint-parser": "^21.0.0",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
