--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/webpack": "^4.4.18",
     "@types/webpack-dev-server": "^3.1.1",
     "@types/webpack-merge": "^4.1.3",
+    "autoprefixer": "^9.3.1",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "eslint": "^5.9.0",
@@ -43,6 +44,8 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.10.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "^2.1.3",
@@ -56,5 +59,10 @@
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
     "webpack-merge": "^4.1.4"
-  }
+  },
+  "browserslist": [
+    "ie >= 11",
+    "android >= 2.3",
+    "defaults"
+  ]
 }
