--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -16,5 +16,6 @@ rules:
   no-undef: "off" # interface will error
   import/no-duplicates: "off"
   no-unused-vars: "warn"
+  react/self-closing-comp: "warn"
 plugins:
   - typescript
