--- a/package.json
+++ b/package.json
@@ -8,20 +8,18 @@
     "clean": "rimraf dist",
     "build:dev": "cross-env TS_NODE_PROJECT=tasks/tsconfig-webpack.json ts-node tasks/build-dev.ts",
     "build:prod": "cross-env TS_NODE_PROJECT=tasks/tsconfig-webpack.json ts-node tasks/build-prod.ts",
-    "predev": "npm run clean",
     "dev": "cross-env TS_NODE_PROJECT=tasks/tsconfig-webpack.json ts-node tasks/dev-server.ts",
-    "deploy": "tasks/deploy.sh"
+    "dev:old": "cross-env TS_NODE_PROJECT=tasks/tsconfig-webpack.json ts-node tasks/dev-server.ts --nomodule",
+    "deploy": "tasks/deploy.sh",
+    "start": "npm run dev"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "react": "^16.6.1",
-    "react-dom": "^16.6.1"
-  },
   "devDependencies": {
     "@types/fs-extra": "^5.0.4",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/mini-css-extract-plugin": "^0.2.0",
+    "@types/ramda": "^0.25.42",
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
     "@types/rimraf": "^2.0.2",
@@ -40,12 +38,16 @@
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-typescript": "^0.13.0",
+    "file-loader": "^2.0.0",
     "fs-extra": "^7.0.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
+    "ramda": "^0.26.0",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "^2.1.3",
@@ -55,7 +57,7 @@
     "tsconfig-paths": "^3.7.0",
     "typescript": "^3.1.6",
     "typescript-eslint-parser": "^21.0.1",
-    "webpack": "^4.25.1",
+    "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
     "webpack-merge": "^4.1.4"
