--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/fs-extra": "^5.0.4",
     "@types/html-webpack-plugin": "^3.2.0",
+    "@types/ip": "0.0.32",
     "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/ramda": "^0.25.42",
     "@types/react": "^16.7.6",
@@ -41,6 +42,7 @@
     "file-loader": "^2.0.0",
     "fs-extra": "^7.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "ip": "^1.1.5",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
