--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "clean": "rimraf dist",
     "build:dev": "cross-env TS_NODE_PROJECT=tasks/tsconfig-webpack.json ts-node tasks/build-dev.ts",
     "build:prod": "cross-env TS_NODE_PROJECT=tasks/tsconfig-webpack.json ts-node tasks/build-prod.ts",
+    "postbuild:prod": "bash tasks/post-prod-build.sh",
     "dev": "cross-env TS_NODE_PROJECT=tasks/tsconfig-webpack.json ts-node tasks/dev-server.ts",
     "dev:old": "cross-env TS_NODE_PROJECT=tasks/tsconfig-webpack.json ts-node tasks/dev-server.ts --nomodule",
-    "deploy": "tasks/deploy.sh",
+    "deploy": "bash tasks/deploy.sh",
     "start": "npm run dev"
   },
   "author": "",
@@ -22,7 +23,7 @@
     "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/ramda": "^0.25.42",
     "@types/react": "^16.7.7",
-    "@types/react-dom": "^16.0.10",
+    "@types/react-dom": "^16.0.11",
     "@types/rimraf": "^2.0.2",
     "@types/webpack": "^4.4.18",
     "@types/webpack-dev-server": "^3.1.1",
@@ -47,7 +48,7 @@
     "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
-    "ramda": "^0.26.0",
+    "ramda": "^0.26.1",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "rimraf": "^2.6.2",
@@ -59,6 +60,7 @@
     "tsconfig-paths": "^3.7.0",
     "typescript": "^3.1.6",
     "typescript-eslint-parser": "^21.0.1",
+    "uglify-js": "^3.4.9",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
